#268 Sort PNML objects to get deterministic list.