@@ -2,9 +2,11 @@
 package com.github.tno.pokayoke.transform.petrify2uml;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.eclipse.uml2.uml.Activity;
 import org.eclipse.uml2.uml.ActivityEdge;
@@ -63,8 +65,13 @@ public class PNML2UMLActivityHelper {
      */
     public Map<Transition, OpaqueAction> transformTransitions(Page page, Activity activity) {
         Map<Transition, OpaqueAction> transitionToAction = new LinkedHashMap<>();
-        page.getObjects().stream().filter(Transition.class::isInstance).map(Transition.class::cast).forEach(
+        List<Transition> transitions = page.getObjects().stream().filter(Transition.class::isInstance)
+                .map(Transition.class::cast).collect(Collectors.toList());
+        Collections.sort(transitions, (t1, t2) -> t1.getId().compareTo(t2.getId()));
+
+        transitions.stream().map(Transition.class::cast).forEach(
                 transition -> transitionToAction.put(transition, transformTransition(transition.getId(), activity)));
+
         return transitionToAction;
     }
 
@@ -86,7 +93,9 @@ public class PNML2UMLActivityHelper {
      */
     public void transformMarkedAndFinalPlaces(Page page, Activity activity) {
         // Obtain the places.
-        List<Place> places = page.getObjects().stream().filter(Place.class::isInstance).map(Place.class::cast).toList();
+        List<Place> places = page.getObjects().stream().filter(Place.class::isInstance).map(Place.class::cast)
+                .collect(Collectors.toList());
+        Collections.sort(places, (p1, p2) -> p1.getId().compareTo(p2.getId()));
 
         places.stream().filter(place -> isMarkedPlace(place)).forEach(place -> transformMarkedPlace(place, activity));
         places.stream().filter(place -> isFinalPlace(place)).forEach(place -> transformFinalPlace(place, activity));
@@ -199,7 +208,9 @@ public class PNML2UMLActivityHelper {
         // Obtain the places that have at least one incoming and outgoing arcs (i.e., excluding the places for initial
         // and final nodes).
         List<Place> places = page.getObjects().stream().filter(Place.class::isInstance).map(Place.class::cast)
-                .filter(place -> !place.getInArcs().isEmpty() && !place.getOutArcs().isEmpty()).toList();
+                .filter(place -> !place.getInArcs().isEmpty() && !place.getOutArcs().isEmpty())
+                .collect(Collectors.toList());
+        Collections.sort(places, (p1, p2) -> p1.getId().compareTo(p2.getId()));
 
         for (Place place: places) {
             ActivityNode source = transformMerge(place, activity);
@@ -211,7 +222,8 @@ public class PNML2UMLActivityHelper {
     private ActivityNode transformMerge(Place place, Activity activity) {
         // Obtain the actions translated from the sources of the incoming arcs.
         List<OpaqueAction> sourceActions = place.getInArcs().stream().map(o -> nameActionMap.get(o.getSource().getId()))
-                .toList();
+                .collect(Collectors.toList());
+        Collections.sort(sourceActions, (a1, a2) -> a1.getName().compareTo(a2.getName()));
 
         if (sourceActions.size() == 1) {
             return sourceActions.get(0);
@@ -230,7 +242,8 @@ public class PNML2UMLActivityHelper {
     private ActivityNode transformDecision(Place place, Activity activity) {
         // Obtain the actions translated from the target of the outgoing arcs.
         List<OpaqueAction> targetActions = place.getOutArcs().stream()
-                .map(o -> nameActionMap.get(o.getTarget().getId())).toList();
+                .map(o -> nameActionMap.get(o.getTarget().getId())).collect(Collectors.toList());
+        Collections.sort(targetActions, (a1, a2) -> a1.getName().compareTo(a2.getName()));
 
         if (targetActions.size() == 1) {
             return targetActions.get(0);
@@ -277,7 +290,9 @@ public class PNML2UMLActivityHelper {
     public void transformTransitionBasedPatterns(Page page, Activity activity) {
         // Obtain the transitions.
         List<Transition> transitions = page.getObjects().stream().filter(Transition.class::isInstance)
-                .map(Transition.class::cast).toList();
+                .map(Transition.class::cast).collect(Collectors.toList());
+        Collections.sort(transitions, (t1, t2) -> t1.getId().compareTo(t2.getId()));
+
         transitions.stream().filter(PNML2UMLActivityHelper::hasMultiOutArcs)
                 .forEach(transition -> transformFork(transition, activity));
         transitions.stream().filter(PNML2UMLActivityHelper::hasMultiInArcs)
